--- a/test/bendou-app/bendou-app_test.html
+++ b/test/bendou-app/bendou-app_test.html
@@ -15,7 +15,7 @@
 
     <test-fixture id="BasicTestFixture">
       <template>
-        <bendou-app></bendou-app>
+        <bendou-app fullbleed></bendou-app>
       </template>
     </test-fixture>
 
