--- a/src/paper-page/paper-page.html
+++ b/src/paper-page/paper-page.html
@@ -1,9 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
-
 <dom-module id="paper-page">
     <template>
-        <style include="iron-flex iron-flex-alignment iron-positioning">
+        <style>
             :host {
                 display: block;
                 position: relative;
